# modeltrace

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
apps/backend/: package-lock.json  package.json
apps/web/: package-lock.json  package.json  tailwind.config.js
contracts/audit-registry/: Cargo.toml
contracts/payment-router/: Cargo.toml
contracts/usage-meter/: Cargo.toml
docs/: .contributor_0_0.md  .contributor_0_1.md  .contributor_0_10.md  .contributor_0_11.md  .contributor_0_12.md  .contributor_0_13.md  .contributor_0_14.md  .contributor_0_15.md  .contributor_0_16.md  .contributor_0_17.md  .contributor_0_18.md  .contributor_0_19.md  .contributor_0_2.md  .contributor_0_20.md  .contributor_0_3.md  .contributor_0_4.md  .contributor_0_5.md  .contributor_0_6.md  .contributor_0_7.md  .contributor_0_8.md  .contributor_0_9.md  .contributor_10_0.md  .contributor_10_1.md  .contributor_10_10.md  .contributor_10_11.md  .contributor_10_12.md  .contributor_10_13.md  .contributor_10_14.md  .contributor_10_15.md  .contributor_10_16.md  .contributor_10_17.md  .contributor_10_18.md  .contributor_10_19.md  .contributor_10_2.md  .contributor_10_20.md  .contributor_10_3.md  .contributor_10_4.md  .contributor_10_5.md  .contributor_10_6.md  .contributor_10_7.md  (+311 more)
docs/architecture/: audit-node-10.md  audit-node-15.md  audit-node-16.md  audit-node-22.md  audit-node-25.md  audit-node-28.md  audit-node-30.md  audit-node-31.md  audit-node-36.md  audit-node-37.md  audit-node-38.md  audit-node-42.md  audit-node-48.md  audit-node-52.md  (+10 more)
scripts/: deploy-testnet.sh
(+67 files in other folders)
